------------------------------------------------------------------------
0.22 | Piotr Roszatycki <dexter@debian.org> | 2009-03-24

New:

* sprintf is used if "message" attribute is an array reference.

Changes:

* Build requires Test::Unit::Lite 0.21.

------------------------------------------------------------------------
0.21 | Piotr Roszatycki <dexter@debian.org> | 2008-12-08

Fixes:

* Skip ignored packages for verbosity level 2.

* Verbosity level can not be changed.  Reset internal cache with classes
  defaults after the default value was changed.

Changes:

* Method "import" was refactored.

------------------------------------------------------------------------
0.20 | Piotr Roszatycki <dexter@debian.org> | 2008-12-05

New:

* Major API changes.

* New methods to_number/to_string replaced numerify/stringify.

* New method get_caller_stacktrace replaced _caller_backtrace.

* New method: to_bool.

* New internal function qualify_to_ref() which uses Symbol module if it is
  possible.

* Read-only attributes can be defined with pragma interface.

Removed:

* Removed methods: try, with.

* Removed export of try/catch/throw methods and :all tag.

Changes:

* Reference arguments stored as caller_stack are weakened if it is possible.

* catch method takes no arguments.

------------------------------------------------------------------------
0.1901 | Piotr Roszatycki <dexter@debian.org> | 2008-10-13

Fixes:

* Some warnings disabled.

* Added missing test file to manifest.

* Some POD errors fixed.

Changes:

* Updated bundled Test::Unit::Lite to 0.1002.

------------------------------------------------------------------------
0.19 | Piotr Roszatycki <dexter@debian.org> | 2008-10-08

Fixes:

* Don't create package if it is loaded correcly.

Changes:

* Cleaned up "with" method.

* Updated bundled Test::Unit::Lite to 0.1001.

------------------------------------------------------------------------
0.18 | Piotr Roszatycki <dexter@debian.org> | 2008-10-08

New:
